--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li><a href="#">Docs</a></li>
 				<li><a href="#">Company</a></li>
 			</ul>
-			<a class="cta" href="#">Get Started</a>
+			<a class="cta" href="#get-started">Get Started</a>
 		</nav>
 	</header>
 
@@ -27,8 +27,8 @@
 				<h1 class="h1">Contemporary Neo‑Swiss design system</h1>
 				<p class="lead">A clean, grid-based responsive foundation — modern sans-serif, generous white space, and a disciplined 8px system.</p>
 				<div class="hero-actions">
-					<a class="btn primary" href="#">Get started</a>
-					<a class="btn ghost" href="#">Learn more</a>
+					<a class="btn primary" href="#get-started">Get started</a>
+					<a class="btn ghost" href="neo-swiss.html">Learn more</a>
 				</div>
 			</div>
 			<div class="hero-right col-span-4 col-span-md-3">
@@ -37,6 +37,28 @@
 					<div class="card-title">Grid preview</div>
 					<p class="muted">12 / 6 / 4 grid with consistent spacing and fluid type scale.</p>
 				</div>
+			</div>
+		</section>
+			<div class="container" style="margin-top:var(--space-2)">
+				<a class="btn ghost" href="neo-swiss.html">Read more about Neo‑Swiss</a>
+			</div>
+
+		<!-- Get started anchor section: history, why Neo‑Swiss, and creation notes -->
+		<section id="get-started" class="container get-started section">
+			<h2 class="h2" tabindex="-1">Get started — Overview</h2>
+			<div class="grid get-started-grid">
+				<article class="card col-span-4">
+					<h3>History</h3>
+					<p class="muted">Neo‑Swiss evolved from the Swiss International Style — a focus on clarity, grid systems, and typographic discipline adapted for modern digital interfaces.</p>
+				</article>
+				<article class="card col-span-4">
+					<h3>Why Neo‑Swiss</h3>
+					<p class="muted">We use Neo‑Swiss to deliver calm, legible interfaces that scale across breakpoints — fewer visual distractions, better hierarchy, and predictable layouts.</p>
+				</article>
+				<article class="card col-span-4">
+					<h3>Creation of this website</h3>
+					<p class="muted">This sample site demonstrates the system: a responsive grid, typographic scale, and minimal components. Use the code as a starting point for your own projects.</p>
+				</article>
 			</div>
 		</section>
 
