docs: created timeline.html, have it as button and redirect when clicked.

--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
 				</div>
 			</div>
 		</section>
-			<div class="container" style="margin-top:var(--space-2)">
-				<a class="btn ghost" href="neo-swiss.html">Read more about Neo‑Swiss</a>
-			</div>
-
-		<!-- Get started anchor section: history, why Neo‑Swiss, and creation notes -->
+		<div class="container" style="margin-top:var(--space-2)">
+			<a class="btn ghost" href="neo-swiss.html">Read more about Neo‑Swiss</a>
+			<a class="btn ghost" href="timeline.html" style="margin-left: var(--space-2);">View Timeline</a>
+		</div>		<!-- Get started anchor section: history, why Neo‑Swiss, and creation notes -->
 		<section id="get-started" class="container get-started section">
 			<h2 class="h2" tabindex="-1">Get started — Overview</h2>
 			<div class="grid get-started-grid">
