--- a/neo-swiss.html
+++ b/neo-swiss.html
@@ -15,7 +15,7 @@
 			<ul class="nav-links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="#principles">Principles</a></li>
-				<li><a href="#use">Use</a></li>
+				<li><a href="timeline.html">Timeline</a></li>
 			</ul>
 			<a class="cta" href="index.html#">Back</a>
 		</nav>
