Feature: updated styles and moved css for time line in style.

--- a/index.html
+++ b/index.html
@@ -22,39 +22,33 @@
 	</header>
 
 	<main>
-		<section class="container hero grid section">
-			<div class="hero-left col-span-4 col-span-md-3">
-				<h1 class="h1">Contemporary Neo‑Swiss design system</h1>
-				<p class="lead">A clean, grid-based responsive foundation — modern sans-serif, generous white space, and a disciplined 8px system.</p>
-				<div class="hero-actions">
-					<a class="btn primary" href="#get-started">Get started</a>
-					<a class="btn ghost" href="neo-swiss.html">Learn more</a>
+		<section class="hero-section">
+			<div class="container grid section">
+				<div class="hero-left col-span-6 col-span-md-3">
+					<h1 class="h1">Neo‑Swiss<br>Design System</h1>
+					<p class="lead">Grid-based. Responsive. Minimal.</p>
 				</div>
-			</div>
-			<div class="hero-right col-span-4 col-span-md-3">
-				<!-- Illustration placeholder -->
-				<div class="card demo-card">
-					<div class="card-title">Grid preview</div>
-					<p class="muted">12 / 6 / 4 grid with consistent spacing and fluid type scale.</p>
+				<div class="hero-right col-span-6 col-span-md-3">
+				
 				</div>
 			</div>
 		</section>
-		<div class="container" style="margin-top:var(--space-2)">
-			<a class="btn ghost" href="neo-swiss.html">Read more about Neo‑Swiss</a>
-			<a class="btn ghost" href="timeline.html" style="margin-left: var(--space-2);">View Timeline</a>
+		<div class="container cta-row" style="margin-top:var(--space-4)">
+			<a class="btn ghost" href="neo-swiss.html">Learn More</a>
+			<a class="btn ghost" href="timeline.html">Timeline</a>
 		</div>		<!-- Get started anchor section: history, why Neo‑Swiss, and creation notes -->
 		<section id="get-started" class="container get-started section">
-			<h2 class="h2" tabindex="-1">Get started — Overview</h2>
-			<div class="grid get-started-grid">
-				<article class="card col-span-4">
+			<h2 class="h2" tabindex="-1">Overview</h2>
+			<div class="grid">
+				<article class="card col-span-4 col-span-md-2">
 					<h3>History</h3>
 					<p class="muted">Neo‑Swiss evolved from the Swiss International Style — a focus on clarity, grid systems, and typographic discipline adapted for modern digital interfaces.</p>
 				</article>
-				<article class="card col-span-4">
+				<article class="card col-span-4 col-span-md-2">
 					<h3>Why Neo‑Swiss</h3>
 					<p class="muted">We use Neo‑Swiss to deliver calm, legible interfaces that scale across breakpoints — fewer visual distractions, better hierarchy, and predictable layouts.</p>
 				</article>
-				<article class="card col-span-4">
+				<article class="card col-span-4 col-span-md-2">
 					<h3>Creation of this website</h3>
 					<p class="muted">This sample site demonstrates the system: a responsive grid, typographic scale, and minimal components. Use the code as a starting point for your own projects.</p>
 				</article>
@@ -63,32 +57,33 @@
 
 		<section class="container features grid section">
 			<div class="feature col-span-4 col-span-md-2">
-				<h3>Flexible grid</h3>
-				<p class="muted">12 columns on desktop, 6 on tablet, 4 on mobile — compose layouts reliably.</p>
+				<h3>Flexible Grid</h3>
+				<p class="muted">12 / 6 / 4 column system scales across all devices with precision.</p>
 			</div>
 			<div class="feature col-span-4 col-span-md-2">
-				<h3>Simple scale</h3>
-				<p class="muted">8px base grid, consistent spacing tokens and clear typographic rhythm.</p>
+				<h3>Typographic Scale</h3>
+				<p class="muted">Fluid sizing from 8px base, maintaining hierarchy and rhythm.</p>
 			</div>
 			<div class="feature col-span-4 col-span-md-2">
-				<h3>Monochrome palette</h3>
-				<p class="muted">Black, white, grays, with an optional accent to keep visuals calm and purposeful.</p>
+				<h3>Minimal Palette</h3>
+				<p class="muted">Black, white, grays, accent — clarity through restraint.</p>
 			</div>
 		</section>
 
 		<section class="container docs section">
+			<h2 class="h2" style="margin-bottom: var(--space-4);">Documentation</h2>
 			<div class="grid">
 				<div class="doc-card col-span-4 col-span-md-2 col-span-lg-1">
-					<h4>Getting started</h4>
-					<p class="muted">Quick setup and examples.</p>
+					<h4 style="margin: 0 0 var(--space-1) 0;">Getting Started</h4>
+					<p class="muted" style="margin: 0; font-size: 0.9rem;">Setup guides and quick examples.</p>
 				</div>
 				<div class="doc-card col-span-4 col-span-md-2 col-span-lg-1">
-					<h4>Components</h4>
-					<p class="muted">Accessible, minimal, composable.</p>
+					<h4 style="margin: 0 0 var(--space-1) 0;">Components</h4>
+					<p class="muted" style="margin: 0; font-size: 0.9rem;">Accessible & reusable patterns.</p>
 				</div>
 				<div class="doc-card col-span-4 col-span-md-2 col-span-lg-1">
-					<h4>Guidelines</h4>
-					<p class="muted">Spacing, type, color, and motion guidance.</p>
+					<h4 style="margin: 0 0 var(--space-1) 0;">Guidelines</h4>
+					<p class="muted" style="margin: 0; font-size: 0.9rem;">Spacing, type, & color rules.</p>
 				</div>
 			</div>
 		</section>
