--- a/timeline.html
+++ b/timeline.html
@@ -7,104 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./styles/styles.css">
-	<style>
-		/* Timeline-specific styles */
-		.timeline-container {
-			position: relative;
-			padding: var(--space-4) 0;
-		}
-
-		.timeline-item {
-			display: grid;
-			grid-template-columns: 1fr 40px 1fr;
-			gap: var(--space-4);
-			margin-bottom: var(--space-6);
-			align-items: start;
-		}
-
-		/* Alternate left/right layout on desktop */
-		@media (min-width: var(--bp-lg)) {
-			.timeline-item:nth-child(odd) {
-				direction: rtl;
-			}
-			.timeline-item:nth-child(odd) > * {
-				direction: ltr;
-			}
-		}
-
-		/* Mobile: single column centered */
-		@media (max-width: 767px) {
-			.timeline-item {
-				grid-template-columns: 40px 1fr;
-				gap: var(--space-3);
-			}
-		}
-
-		.timeline-dot {
-			width: 40px;
-			height: 40px;
-			border-radius: 50%;
-			background: var(--accent);
-			border: 3px solid var(--bg);
-			position: relative;
-			flex-shrink: 0;
-			z-index: 2;
-		}
-
-		.timeline-line {
-			position: absolute;
-			left: 50%;
-			top: 0;
-			bottom: 0;
-			width: 2px;
-			background: linear-gradient(to bottom, var(--accent), transparent);
-			transform: translateX(-50%);
-		}
-
-		@media (max-width: 767px) {
-			.timeline-line {
-				left: 19px;
-			}
-		}
-
-		.timeline-content {
-			background: var(--surface);
-			border-radius: 10px;
-			padding: var(--space-3);
-			box-shadow: 0 4px 12px rgba(11,11,11,0.03);
-		}
-
-		.timeline-date {
-			font-weight: 700;
-			color: var(--accent);
-			margin-bottom: var(--space-1);
-			font-size: 14px;
-			text-transform: uppercase;
-			letter-spacing: 0.05em;
-		}
-
-		.timeline-title {
-			font-weight: 700;
-			margin-bottom: var(--space-1);
-			font-size: 18px;
-		}
-
-		.timeline-description {
-			color: var(--muted);
-			font-size: 15px;
-			line-height: 1.5;
-		}
-
-		/* Ensure timeline-content is wide enough on desktop */
-		@media (min-width: var(--bp-lg)) {
-			.timeline-item:nth-child(odd) .timeline-content {
-				grid-column: 1;
-			}
-			.timeline-item:nth-child(even) .timeline-content {
-				grid-column: 3;
-			}
-		}
-	</style>
+	<link rel="stylesheet" href="./styles/timeline.css">
 </head>
 <body class="neo-swiss">
 	<header class="site-header">
