feature: fixed the css layout so it is spread evenly

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 	<link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body class="neo-swiss">
+	<a class="skip-link" href="#main-content">Skip to content</a>
 	<header class="site-header">
-		<nav class="container nav">
+		<nav class="container nav" aria-label="Primary navigation">
 			<div class="brand">Neo‑Swiss</div>
 			<ul class="nav-links">
 				<li><a href="#">Product</a></li>
@@ -21,7 +22,7 @@
 		</nav>
 	</header>
 
-	<main>
+	<main id="main-content">
 		<section class="hero-section">
 			<div class="container grid section">
 				<div class="hero-left col-span-6 col-span-md-3">
@@ -33,7 +34,7 @@
 				</div>
 			</div>
 		</section>
-		<div class="container cta-row" style="margin-top:var(--space-4)">
+		<div class="container cta-row">
 			<a class="btn ghost" href="neo-swiss.html">Learn More</a>
 			<a class="btn ghost" href="timeline.html">Timeline</a>
 		</div>		<!-- Get started anchor section: history, why Neo‑Swiss, and creation notes -->
@@ -71,19 +72,19 @@
 		</section>
 
 		<section class="container docs section">
-			<h2 class="h2" style="margin-bottom: var(--space-4);">Documentation</h2>
+			<h2 class="h2">Documentation</h2>
 			<div class="grid">
 				<div class="doc-card col-span-4 col-span-md-2 col-span-lg-1">
-					<h4 style="margin: 0 0 var(--space-1) 0;">Getting Started</h4>
-					<p class="muted" style="margin: 0; font-size: 0.9rem;">Setup guides and quick examples.</p>
+					<h4>Getting Started</h4>
+					<p class="muted">Setup guides and quick examples.</p>
 				</div>
 				<div class="doc-card col-span-4 col-span-md-2 col-span-lg-1">
-					<h4 style="margin: 0 0 var(--space-1) 0;">Components</h4>
-					<p class="muted" style="margin: 0; font-size: 0.9rem;">Accessible & reusable patterns.</p>
+					<h4>Components</h4>
+					<p class="muted">Accessible & reusable patterns.</p>
 				</div>
 				<div class="doc-card col-span-4 col-span-md-2 col-span-lg-1">
-					<h4 style="margin: 0 0 var(--space-1) 0;">Guidelines</h4>
-					<p class="muted" style="margin: 0; font-size: 0.9rem;">Spacing, type, & color rules.</p>
+					<h4>Guidelines</h4>
+					<p class="muted">Spacing, type, & color rules.</p>
 				</div>
 			</div>
 		</section>
