--- a/timeline.html
+++ b/timeline.html
@@ -10,8 +10,9 @@
 	<link rel="stylesheet" href="./styles/timeline.css">
 </head>
 <body class="neo-swiss">
+	<a class="skip-link" href="#main-content">Skip to content</a>
 	<header class="site-header">
-		<nav class="container nav">
+		<nav class="container nav" aria-label="Primary navigation">
 			<div class="brand"><a href="index.html">Neo‑Swiss</a></div>
 			<ul class="nav-links">
 				<li><a href="index.html">Home</a></li>
@@ -22,7 +23,7 @@
 		</nav>
 	</header>
 
-	<main>
+	<main id="main-content">
 		<section class="container section">
 			<h1 class="h1">Neo‑Swiss Design Timeline</h1>
 			<p class="lead">A journey from concept to modern digital design system — the evolution of Neo‑Swiss Design from its roots in Swiss typography to today's responsive, accessible interfaces.</p>
@@ -104,9 +105,9 @@
 			</div>
 		</section>
 
-		<section class="container section" style="text-align: center;">
+		<section class="container section text-center">
 			<h2 class="h2">Explore more</h2>
-			<div style="display: flex; gap: var(--space-2); justify-content: center; flex-wrap: wrap;">
+			<div class="actions">
 				<a class="btn primary" href="index.html">Home</a>
 				<a class="btn ghost" href="neo-swiss.html">Learn about Neo‑Swiss</a>
 			</div>
