docs: created examples.html and updated so index.html is able to link between them, up dated all the other to match the neo-swiss design

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		<nav class="container nav" aria-label="Primary navigation">
 			<div class="brand">Neo‑Swiss</div>
 			<ul class="nav-links">
-				<li><a href="#">Product</a></li>
-				<li><a href="#">Docs</a></li>
-				<li><a href="#">Company</a></li>
+				<li><a href="neo-swiss.html">About</a></li>
+				<li><a href="timeline.html">Timeline</a></li>
+				<li><a href="examples.html">Examples</a></li>
 			</ul>
-			<a class="cta" href="#get-started">Get Started</a>
+			<a class="cta" href="#get-started">Get started</a>
 		</nav>
 	</header>
 
@@ -37,6 +37,7 @@
 		<div class="container cta-row">
 			<a class="btn ghost" href="neo-swiss.html">Learn More</a>
 			<a class="btn ghost" href="timeline.html">Timeline</a>
+			<a class="btn ghost" href="examples.html">Examples</a>
 		</div>		<!-- Get started anchor section: history, why Neo‑Swiss, and creation notes -->
 		<section id="get-started" class="container get-started section">
 			<h2 class="h2" tabindex="-1">Overview</h2>
