--- a/neo-swiss.html
+++ b/neo-swiss.html
@@ -16,8 +16,9 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="#principles">Principles</a></li>
 				<li><a href="timeline.html">Timeline</a></li>
+				<li><a href="examples.html">Examples</a></li>
 			</ul>
-			<a class="cta" href="index.html#">Back</a>
+			<a class="cta" href="index.html">Back</a>
 		</nav>
 	</header>
 
