--- a/timeline.html
+++ b/timeline.html
@@ -18,6 +18,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="neo-swiss.html">About</a></li>
 				<li><a href="#timeline">Timeline</a></li>
+				<li><a href="examples.html">Examples</a></li>
 			</ul>
 			<a class="cta" href="index.html">Back</a>
 		</nav>
