Update: have an audit, with style, updated so it match WCAG and lighthouse

--- a/examples.html
+++ b/examples.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta name="description" content="Real-world examples of Neo-Swiss design principles in action, analyzing interfaces from Stripe, Airbnb, and Linear." />
 	<title>Design Examples — Neo‑Swiss</title>
+	<link rel="icon" href="data:," />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./styles/styles.css">
@@ -198,7 +200,7 @@
 			<h2 class="h2">Explore the System</h2>
 			<div class="actions">
 				<a class="btn primary" href="index.html">Back to Home</a>
-				<a class="btn ghost" href="checklist/aesthetic-review.md" target="_blank">Read Full Audit</a>
+				<a class="btn ghost" href="audit.html">Read Full Audit</a>
 			</div>
 		</section>
 	</main>
