--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta name="description" content="A minimal, responsive, grid-based design system inspired by the Swiss International Style. Built with semantic HTML and modern CSS." />
 	<title>Neo‑Swiss Design Sample</title>
+	<link rel="icon" href="data:," />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./styles/styles.css">
@@ -35,12 +37,12 @@
 			</div>
 		</section>
 		<div class="container cta-row">
-			<a class="btn ghost" href="neo-swiss.html">Learn More</a>
+			<a class="btn ghost" href="neo-swiss.html" aria-label="Learn more about Neo-Swiss">Learn More</a>
 			<a class="btn ghost" href="timeline.html">Timeline</a>
 			<a class="btn ghost" href="examples.html">Examples</a>
 		</div>		<!-- Get started anchor section: history, why Neo‑Swiss, and creation notes -->
 		<section id="get-started" class="container get-started section">
-			<h2 class="h2" tabindex="-1">Overview</h2>
+			<h2 class="h2">Overview</h2>
 			<div class="grid">
 				<article class="card col-span-4 col-span-md-2">
 					<h3>History</h3>
@@ -58,6 +60,7 @@
 		</section>
 
 		<section class="container features grid section">
+			<h2 class="visually-hidden">Features</h2>
 			<div class="feature col-span-4 col-span-md-2">
 				<h3>Flexible Grid</h3>
 				<p class="muted">12 / 6 / 4 column system scales across all devices with precision.</p>
