--- a/neo-swiss.html
+++ b/neo-swiss.html
@@ -3,14 +3,17 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta name="description" content="Learn about the core principles of Neo-Swiss design: grid systems, typography, and minimalism." />
 	<title>About Neo‑Swiss Design</title>
+	<link rel="icon" href="data:," />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body class="neo-swiss">
+	<a class="skip-link" href="#main-content">Skip to content</a>
 	<header class="site-header">
-		<nav class="container nav">
+		<nav class="container nav" aria-label="Primary navigation">
 			<div class="brand"><a href="index.html">Neo‑Swiss</a></div>
 			<ul class="nav-links">
 				<li><a href="index.html">Home</a></li>
@@ -22,7 +25,7 @@
 		</nav>
 	</header>
 
-	<main>
+	<main id="main-content">
 		<section class="container section">
 			<h1 class="h1">About Neo‑Swiss Design</h1>
 			<p class="lead">Neo‑Swiss is a contemporary adaptation of the Swiss International Style for digital products. It emphasizes clarity, typographic hierarchy, disciplined grid systems, and calm palettes to help users focus on content and function.</p>
@@ -46,25 +49,24 @@
 
 		<section id="creation" class="container section">
 			<h2 class="h2">Creation of this sample site</h2>
-			<p class="muted">This sample website was created as a minimal implementation to demonstrate how Neo‑Swiss patterns translate to the web. It includes:
+			<p class="muted">This sample website was created as a minimal implementation to demonstrate how Neo‑Swiss patterns translate to the web. It includes:</p>
 			<ul>
 				<li>a mobile-first responsive grid (4 / 6 / 12 columns),</li>
 				<li>a small set of components (cards, buttons, nav),</li>
 				<li>design tokens implemented with CSS custom properties for spacing, type and color.</li>
 			</ul>
-			Use this as a starting point — copy the structure, adjust tokens, and extend components as needed.</p>
+			<p class="muted">Use this as a starting point — copy the structure, adjust tokens, and extend components as needed.</p>
 		</section>
 
 		<section id="use" class="container section">
 			<h2 class="h2">When to use Neo‑Swiss</h2>
-			<p class="muted">Neo‑Swiss is a good fit when you need interfaces that are:
+			<p class="muted">Neo‑Swiss is a good fit when you need interfaces that are:</p>
 			<ul>
 				<li>content-forward and information-dense,</li>
 				<li>multi-platform and responsive,</li>
 				<li>simple to maintain with a small design language,</li>
 				<li>accessible and fast-loading.</li>
 			</ul>
-			</p>
 		</section>
 
 		<section id="resources" class="container section">
