--- a/timeline.html
+++ b/timeline.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta name="description" content="A chronological history of the Swiss International Style and its evolution into Neo-Swiss design." />
 	<title>Neo‑Swiss Timeline</title>
+	<link rel="icon" href="data:," />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./styles/styles.css">
